<resources>
    <!--    <string name="app_name">MarketPlace</string>-->
    <string name="app_name">Market Qube</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_image">profile image</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="customer">Customer</string>
    <string name="text_for_create_store">If you want to create a store click</string>
    <string name="create_store">Create Vendor</string>

    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="word1">Don\'t have an account? Create account as </string>
    <string name="vendor">Vendor</string>
    <string name="visitor">Explore</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">phone number</string>
    <string name="store_name">store name</string>
    <string name="cancel">Cancel</string>
    <string name="address">address</string>
    <string name="info">Information</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="logout">Log Out</string>
    <string name="location">Location</string>
    <string name="Chat">Chat</string>
    <string name="product_icon">product icon</string>
    <string name="detail">detail</string>
    <string name="price">price</string>
    <string name="product_name">product name</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="add_product">Add Product</string>
    <string name="market_qube">Market Qube</string>
    <string name="app_logo">App logo</string>
    <string name="market">Market</string>
    <string name="pointer_image">pointer image</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="message_box">Message Box</string>
    <string name="enter_message">enter message</string>
    <string name="or_click">or click</string>
    <string name="customer_text">To be a customer</string>
    <string name="create_customer">Create Customer</string>
    <string name="save_location">Save Location</string>
    <string name="no_location">No Location</string>
    <string name="shop_owner_appear_here">Shop owner appear here</string>
    <string name="send">Send</string>
    <string name="sotw_north">Send</string>

    <!--    Storage String preference-->
    <string name="sync_pref">sync</string>
    <string name="sync_pref_summary">
        Get you photos, videos, contacts,subscription etc all on one device
    </string>

    <string name="pref_syncConnectionType">Sync Connection type</string>
    <string name="pref_syncConnectionType_dialog_title">Perform Sync Using</string>
    <string name="pref_syncConnectionType_default_value">Perform Sync Using</string>
    <string name="pref_syncConnectionType_summary">WiFi</string>
    <string name="app_theme">apptheme</string>
    <string name="set_theme_dark">Choose dark theme</string>
    <string name="for_your_eyes">Use pitch dark for the app</string>
    <string name="app_layout">App Layout</string>
    <string name="set_app_layout">Set layout for app</string>
    <string name="layout_style_default_value">Using Grid</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="set_theme">Set Theme</string>
    <string name="set_shop_layout">Set Shop Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="vertical_layout">Vertical Layout</string>
    <string-array name="layout_style_entries">
        <item>Grid</item>
        <item>Vertical</item>
    </string-array>
    <string-array name="layout_style_values">
        <item>Grid</item>
        <item>Vertical</item>
    </string-array>

    <style name="appTheme" parent="Theme.AppCompat.Light.DarkActionBar">
        <item name="colorPrimary">@color/primary</item>
        <item name="colorPrimaryDark">@color/primary_dark</item>
        <item name="colorAccent">@color/accent</item>
    </style>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="create_vendor">create vendor</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
</resources>