<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/id_menu_location"
        android:title="@string/location"
        app:showAsAction="ifRoom"
        android:icon="@drawable/locateicon"/>
    <item
        android:id="@+id/id_menu_chat"
        android:title="@string/Chat"
        android:icon="@drawable/chaticon"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/id_menu_select_all"
        android:title="@string/select_all"
        android:visible="false"/>
    <item
        android:id="@+id/id_menu_delete"
        android:title="@string/delete"
        android:visible="false"/>
    <item
        android:id="@+id/id_menu_setting"
        android:title="@string/settings"
        android:icon="@drawable/settingicon"/>
    <item
        android:id="@+id/id_menu_logout"
        android:title="@string/logout"/>

</menu>