<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.CustomerProfileEditFragment"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_sign_in_info"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/id_image_profile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/applogo" />

    <EditText
        android:id="@+id/id_et_signin_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="false"
        android:background="@drawable/bg_border"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1" />

    <EditText
        android:id="@+id/id_et_signin_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="false"
        android:background="@drawable/bg_border"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1" />

    <EditText
        android:id="@+id/id_et_signin_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="false"
        android:background="@drawable/bg_border"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="20"
        android:maxLines="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="horizontal"
        android:layout_marginVertical="5dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_btn_cancel"
            android:layout_weight="1"
            android:text="@string/back"
            android:layout_marginHorizontal="10dp"
            android:textStyle="italic|bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAllCaps="false"
            style="@style/myButton"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_btn_sign_in"
            android:layout_weight="1"
            android:text="@string/create"
            android:layout_marginHorizontal="10dp"
            android:textStyle="italic|bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAllCaps="false"
            style="@style/myButton"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_btn_customer"
        android:text="@string/market"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginVertical="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="10dp"/>
</LinearLayout>
