<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_tv_profile_name"
        android:textStyle="bold"
        android:text="@string/username"/>

    <TextView
        android:id="@+id/id_tv_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:singleLine="false"
        android:text="@string/message"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/id_et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="dictionary"
        android:hint="@string/enter_message"
        android:textColor="@color/black"
        android:inputType="textMultiLine|text"
        android:minHeight="48dp"
        android:singleLine="false" />

</LinearLayout>