<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.ProfileEditFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:layout_marginVertical="5dp">
        <ImageView
            android:id="@+id/id_image_profile"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:background="@color/grey"
            android:scaleType="fitCenter"
            android:contentDescription="@string/profile_image"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/applogo" />

        <EditText
            android:id="@+id/id_et_signin_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="false"
            android:background="@drawable/bg_border"
            android:gravity="center"
            android:hint="@string/username"
            android:maxLength="50"
            android:maxLines="1"
            android:inputType="text" />

        <EditText
            android:id="@+id/id_et_signin_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="false"
            android:background="@drawable/bg_border"
            android:gravity="center"
            android:hint="@string/password"
            android:maxLength="10"
            android:maxLines="1"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/id_et_signin_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="false"
            android:background="@drawable/bg_border"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="phone" />

        <EditText
            android:id="@+id/id_et_signin_store_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="false"
            android:background="@drawable/bg_border"
            android:gravity="center"
            android:hint="@string/store_name"
            android:maxLength="50"
            android:maxLines="1"
            android:inputType="text" />

        <EditText
            android:id="@+id/id_et_signin_address"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="false"
            android:background="@drawable/bg_border"
            android:gravity="top"
            android:hint="@string/address"
            android:maxLength="200"
            android:minLines="2"
            android:paddingHorizontal="10dp"
            android:inputType="text" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:paddingHorizontal="2dp"
                android:layout_marginHorizontal="5dp"
                android:id="@+id/id_btn_save_location"
                android:text="@string/save_location"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/id_tv_save_location"
                android:text="@string/no_location"
                android:paddingHorizontal="3dp"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_et_signin_address"
            android:background="@color/grey"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/id_btn_cancel"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_marginHorizontal="10dp"
                android:textStyle="italic|bold"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/id_btn_save"
                android:layout_weight="1"
                android:text="@string/save"
                android:layout_marginHorizontal="10dp"
                android:textStyle="italic|bold"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>