<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkgreen"
    tools:context=".social.LocateFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_store_name"
            android:text="@string/store_name"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            android:textColor="@color/white"
            android:background="@color/black"/>

        <ImageView
            android:id="@+id/id_iv_locator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/pointer_image"
            android:adjustViewBounds="true"
            android:src="@drawable/direction" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_tv_distance"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/gold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_tv_info"
            android:text="@string/info"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/gold"/>
    </LinearLayout>
</ScrollView>