<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/id_et_signin_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="false"
        android:background="@drawable/bg_border"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1" />

    <EditText
        android:id="@+id/id_et_signin_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="false"
        android:background="@drawable/bg_border"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1" />


    <EditText
        android:id="@+id/id_et_signin_store_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="false"
        android:background="@drawable/bg_border"
        android:gravity="center"
        android:hint="@string/store_name"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_btn_sign_up"
            android:text="@string/create_vendor"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:textStyle="italic|bold"
            android:textAllCaps="false"
            style="@style/myButton"/>
</LinearLayout>