<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:elevation="5dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true"
    app:cardBackgroundColor="@color/grey"
    android:id="@+id/id_product_popup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/id_iv_product_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:background="@color/black"
            android:src="@drawable/noimage"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/profile_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/producticon"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/product_icon" />
            <EditText
                android:id="@+id/id_product_item_pname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/product_name"
                android:paddingHorizontal="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:inputType="text"
                android:importantForAutofill="no" />
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/nairaicon"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/product_icon" />
            <EditText
                android:id="@+id/id_product_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:paddingHorizontal="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:inputType="number"
                android:importantForAutofill="no" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/detail"
            android:id="@+id/id_product_item_detail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="top"
            android:maxLength="50"
            android:layout_marginStart="5dp"
            android:inputType="text" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/id_btn_cancel"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_marginHorizontal="10dp"
                android:textStyle="italic|bold"
                android:textColor="@color/black"
                android:textSize="25sp"
                style="@style/myButton"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/id_btn_save"
                android:layout_weight="1"
                android:text="@string/save"
                android:layout_marginHorizontal="10dp"
               android:textStyle="italic|bold"
                android:textColor="@color/black"
                android:textSize="25sp"
                style="@style/myButton"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
