<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:elevation="2dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true"
    app:cardBackgroundColor="@color/grey">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/id_iv_product_img"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/black"
            android:src="@drawable/product"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/profile_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/producticon"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/product_icon" />
            <TextView
                android:id="@+id/id_store_item_pname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/product_name"
                android:paddingHorizontal="5dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/nairaicon"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/product_icon" />
            <TextView
                android:id="@+id/id_store_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:paddingHorizontal="5dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/detail"
            android:id="@+id/id_store_item_detail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:maxLength="50"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>